refactor flyway sql, change api to return query information and no longer directly call github API
