# src/main/java/com/jkerak/model/RepositorySearchResultItem.java
@@ -1,76 +1,0 @@
-package com.jkerak.model;
-
-
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.fasterxml.jackson.annotation.JsonProperty;
-
-@JsonIgnoreProperties(ignoreUnknown = true)
-public class RepositorySearchResultItem {
-
-    @JsonProperty("id")
-    private Long id = null;
-
-    @JsonProperty("full_name")
-    private String fullName = null;
-
-    @JsonProperty("html_url")
-    private String url = null;
-
-    @JsonProperty("stargazers_count")
-    private String stars = null;
-
-    @JsonProperty("description")
-    private String description = null;
-
-    @JsonProperty("language")
-    private String language = null;
-
-
-    public Long getId() {
-        return id;
-    }
-
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public String getFullName() {
-        return fullName;
-    }
-
-    public void setFullName(String fullName) {
-        this.fullName = fullName;
-    }
-
-    public String getUrl() {
-        return url;
-    }
-
-    public void setUrl(String url) {
-        this.url = url;
-    }
-
-    public String getStars() {
-        return stars;
-    }
-
-    public void setStars(String stars) {
-        this.stars = stars;
-    }
-
-    public String getDescription() {
-        return description;
-    }
-
-    public void setDescription(String description) {
-        this.description = description;
-    }
-
-    public String getLanguage() {
-        return language;
-    }
-
-    public void setLanguage(String language) {
-        this.language = language;
-    }
-}
