# src/main/resources/swagger.yaml
@@ -5,38 +5,7 @@ consumes:
   - application/json
 
 paths:
-  /repositorySearch:
-    post:
-      description: |
-        Search for potential new repositories to collect
-      operationId: searchRepositories
-      parameters:
-        - name: query
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/repositorySearchQueryDto'
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: '#/definitions/repositorySearchResultsDto'
-  /repositories/{id}:
-    get:
-      description: |
-        get repository listing by id
-      parameters:
-        - name: id
-          in: path
-          description: repositoryId to return
-          required: true
-          type: integer
-          format: int64
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: '#/definitions/repositoryDto'
+
   /userCollections/{id}:
     get:
       description: |
@@ -44,7 +13,7 @@ paths:
       parameters:
         - name: id
           in: path
-          description: id of collection to return
+          description: UserCollectionID
           required: true
           type: integer
           format: int64
@@ -52,17 +21,22 @@ paths:
         200:
           description: OK
           schema:
-            $ref: '#/definitions/repositoryDto'
+            $ref: '#/definitions/userCollectionDto'
 
   /userCollections/{id}/ignore:
     post:
       description: |
-        Add repository to collection
+        ignore repository for collection
       operationId: ignoreRepository
       parameters:
         - name: id
           in: path
-          description: userRepositoryCollectionId to add dao
+          description: UserCollectionID
+          required: true
+          type: integer
+          format: int64
+        - name: repositoryId
+          in: query
           required: true
           type: integer
           format: int64
@@ -70,15 +44,20 @@ paths:
         200:
           description: OK
 
-  /userCollections/{id}/collect:
+  /userCollections/{id}/save:
     post:
       description: |
         Add repository to collection
-      operationId: addRepositoryToUserCollection
+      operationId: saveRepository
       parameters:
         - name: id
           in: path
-          description: userRepositoryCollectionId to add dao
+          description: UserCollectionID
+          required: true
+          type: integer
+          format: int64
+        - name: repositoryId
+          in: query
           required: true
           type: integer
           format: int64
@@ -86,49 +65,19 @@ paths:
         200:
           description: OK
 
+  /userCollections:
+    post:
+      description: |
+        Create new repository
+      operationId: createUserCollection
+      parameters:
+        - name: title
+          in: query
+          required: true
+          type: string
+
 
 definitions:
-  repositorySearchResultsDto:
-    type: object
-    properties:
-      totalCount:
-        type: integer
-        format: int32
-      incompleteResults:
-        type: boolean
-      items:
-        type: array
-        items:
-          $ref: '#/definitions/repositorySearchResultItemDto'
-
-
-  repositorySearchResultItemDto:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-      fullName:
-        type: string
-      description:
-        type: string
-      url:
-        type: string
-      stars:
-        type: integer
-        format: int32
-      language:
-        type: string
-
-  repositorySearchQueryDto:
-    type: object
-    properties:
-      size:
-        type: string
-      stars:
-        type: string
-      language:
-        type: string
 
   userCollectionDto:
     type: object
@@ -142,29 +91,19 @@ definitions:
         type: string
       modified:
         type: string
-      repositories:
+      savedRepos:
         type: array
         items:
-          $ref: '#/definitions/repositoryDto'
-
-  repositoryDto:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-      fullName:
-        type: string
-      description:
-        type: string
-      url:
-        type: string
-      stars:
+          type: string
+      ignoredRepos:
+        type: array
+        items:
+          type: string
+      minimumStars:
         type: integer
         format: int32
-      notes:
-        type: string
-      saved:
-        type: string
-      updated:
+      minimumSize:
+        type: integer
+        format: int32
+      language:
         type: string
